# snowglobe

./: .gitignore  AGENTS.md  pyproject.toml
examples/: ac_sim.py
src/llm_snowglobe/: snowglobe.py
