[tool.poetry]
name = "llm-snowglobe"
version = "0.9.0"
description = "Snow Globe multi-agent system for open-ended wargames with large language models"
license = "Apache-2.0"
authors = ["Daniel Hogan <6313241+dphogan@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/IQTLabs/snowglobe"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
tqdm = "*"
pyyaml = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
platformdirs = "*"
langchain = "*"
openai = "*"
twine = "*"
jupyter = "*"
nicegui = "*"
markdown2 = "*"
watchfiles = "*"
langgraph = "*"
unstructured = "*"
langchain-openai = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-text-splitters = "*"

[tool.poetry.scripts]
snowglobe_config = "llm_snowglobe.scripts:config"
snowglobe_server = "llm_snowglobe.scripts:server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
